# carbonado

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Carbonado.lean  CarbonadoTest.lean  Cargo.toml  README.md  flake.nix  justfile  lake-manifest.json  lakefile.toml  review-round-1-merged.md
.cargo/: config.toml  config.toml.example
.github/workflows/: rust.yaml
Carbonado/: Adamantine.lean  Bao.lean  Cli.lean  Compress.lean  Constants.lean  Crypto.lean  Directory.lean  Fec.lean  Ffi.lean  Filepack.lean  Header.lean  Main.lean  Outboard.lean  Pipeline.lean  Scrub.lean  Shard.lean  Slh.lean  Stream.lean
Carbonado/Bao/: Blake3.lean  Product.lean  Tree.lean
Carbonado/Crypto/: AESCTR.lean  EtM.lean  HMAC.lean  SHA512.lean  Util.lean
Carbonado/Fec/: Galois.lean  Inboard.lean  Matrix.lean  RS.lean
CarbonadoTest/: Bao.lean  Compress.lean  Directory.lean  EtM.lean  Fec.lean  Pipeline.lean  Scaffold.lean  Slh.lean
benches/: crypto_bench.rs  parallel_bench.rs
carbonado-sys/: Cargo.toml  build.rs
carbonado-sys/src/: lib.rs
doc/: STREAMING_PARALLELISM.md  TEST_STRATEGY.md
doc/man/: README.md  carbonado-decode.1  carbonado-encode.1  carbonado-key-import.1  carbonado-key-init.1  carbonado-key-path.1  carbonado-key-show.1  carbonado-key.1  carbonado.1
docs/: ABI.md  GAPS.md  LIMITS.md  PARITY.md  PROOFS.md  SPEC-MATRIX.md  TEST_CONTRACT.md  VISION.md
examples/: bare_serve.rs  basic_roundtrip.rs  dir_archival.rs  slh_dsa_sidecar.rs
include/: carbonado.h
nix/: tooling-purity.nix
nix/native/: carbonado_abi.c  carbonado_zstd.c  default.nix
ref/: README.md
ref/crates/: README.md
ref/parity-harness/: README.md
ref/parity-harness/drivers/bao-vectors/: Cargo.toml
ref/parity-harness/drivers/bao-vectors/src/: main.rs
ref/parity-harness/drivers/etm-vectors/: Cargo.toml
ref/parity-harness/drivers/etm-vectors/src/: main.rs
ref/parity-harness/drivers/rs-vectors/: Cargo.toml
ref/parity-harness/drivers/rs-vectors/src/: main.rs
src/: adamantine.rs  adamantine_payload.rs  cli_app.rs  constants.rs  crypto.rs  decoding.rs  encoding.rs  error.rs  file.rs  filepack.rs  filepack_manifest.rs  lib.rs  ots.rs  paths.rs  structs.rs  utils.rs
src/backend/: mod.rs
src/directory/: format_policy.rs  mod.rs
src/stream/: bao.rs  compress.rs  crypto_stream.rs  decode.rs  decode_async.rs  encode.rs  fec.rs  io.rs  mod.rs  parallel.rs  shard.rs  slice.rs  spool.rs
tests/: adversarial_proptest.rs  apocalypse.rs  bao_keyed_contract.rs  bin_cli.rs  bin_heuristics.rs  bin_smoke.rs  codec.rs  deprecation_aliases.rs  directory_archive.rs  fec_chaos.rs  fec_scrub_matrix.rs  filepack_interop.rs  format.rs  format_amplification.rs  format_policy.rs  header_tamper.rs  parallel_determinism.rs  seekable_slices.rs  serial_fec_path.rs  shard_fec_scrub.rs  sharding.rs  slh_outboard.rs  streaming.proptest-regressions  streaming.rs  streaming_async.rs  streaming_limits.rs  udp_fec_sim.rs
tests/common/: cli.rs  corruption.rs  format_matrix.rs  header_layout.rs  inboard_parity.rs  mod.rs
tests/fixtures/: directory_interop_golden.json
