[package]
name = "carbonado"
edition = "2021"
version = "2.0.0"
license = "MIT"
description = "An apocalypse-resistant data storage format for the truly paranoid. Fully symmetric AES-256-CTR + HMAC-SHA512 (EtM) container with Argon2id KDF helpers. SLH-DSA signatures are provided only as sidecars (via libbitcoinpqc). Clean cryptographic break from ECIES — v1 encrypted archives require external migration."
documentation = "https://docs.rs/carbonado"
homepage = "https://github.com/bitmask-stack/carbonado"
repository = "https://github.com/bitmask-stack/carbonado.git"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
# bao kept for Hash re-export (blake3::Hash), pub re-export in lib, and legacy error type bridging.
# All Bao logic now uses the local keyed fork for 4KB chunk groups + format-keyed roots.
bao = "0.13"

# Local keyed fork (SurmountSystems/bao-tree) — default 4KB groups (BlockSize::from_chunk_log(2))
# via BAO_BLOCK_SIZE. Keyed mode makes root = keyed_hash(key_from_format, data) so the
# Bao hash commits to the exact format pipeline chosen (multi-dimensional naming).
# See AGENTS.md and constants::BAO_BLOCK_SIZE.
# Temporary until upstreamed to n0-computer/bao-tree.
# To fetch the fork (for agents):
#   git clone git@github.com:SurmountSystems/bao-tree.git ../bao-tree
#   (or: git clone https://github.com/SurmountSystems/bao-tree.git ../bao-tree)
# NOTE: path dep requires sibling checkout for builds; will not cargo publish / vendor / CI
# in isolation until git dep or upstream. WASM/cross builds also need the fork available.
bao_tree = { package = "bao-tree", path = "../bao-tree" }
bitmask-enum = "2.1.0"
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"] }
snap = "1.1.0"
thiserror = "1.0"

# v2.0 FEC: reed-solomon-erasure (deterministic RS 4/8, ~50% erasure (any 4 shards),
# reproducible for reliable scrub + bao hash match). Preserves 4/8 model + 4KB/1KB align.
# Note: upstream notes "looking for new maintainers" (as of 2026); periodically re-eval for archival use (see AGENTS).
reed-solomon-erasure = "5"

# New symmetric crypto stack (AES-256-CTR + HMAC-SHA512 EtM)
aes = "0.8"
ctr = "0.9"
hmac = "0.12"
sha2 = "0.10"
getrandom = { version = "0.2", features = ["js"] }
libbitcoinpqc = { version = "0.1", optional = true }

# Note: ecies + libsecp256k1-core + nostr + secp256k1 removed (clean break from old ECIES design and Nostr bech32/npub helpers).
# Future quantum-resistant key formats (qpub etc.) will be handled separately.

[features]
default = ["pqc"]
pqc = ["dep:libbitcoinpqc"]

[dev-dependencies]
anyhow = "1.0.71"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
wasm-bindgen-test = "0.3.37"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "crypto_bench"
harness = false
